--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cached_network_image: ^3.0.0
   cloud_firestore: ^1.0.5
   cupertino_icons: ^1.0.2
-  firebase_admin: ^0.1.4
+  desktop_window: ^0.4.0
   firebase_auth: ^1.1.0
   firebase_core: ^1.2.0
-  firebase_storage: ^8.0.4
   flutter_spinkit: ^5.0.0
   intl: ^0.17.0
   material_design_icons_flutter: ^4.0.5955
