--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,15 +25,14 @@ dependencies:
     sdk: flutter
   cloud_firestore: ^1.0.5
   cupertino_icons: ^1.0.2
-  desktop_window: ^0.4.0
   firebase_auth: ^1.1.0
   firebase_core: ^1.2.0
   flutter_spinkit: ^5.0.0
+  gsheets: ^0.3.0
   intl: ^0.17.0
   material_design_icons_flutter: ^4.0.5955
   provider: ^5.0.0
   shared_preferences: ^2.0.5
-  simple_html_css: ^3.0.1
   transparent_image: ^2.0.0
 
 dev_dependencies:
