--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cached_network_image: ^3.0.0
   cloud_firestore: ^1.0.5
+  connectivity: ^3.0.6
   cupertino_icons: ^1.0.2
   firebase_auth: ^1.1.0
   firebase_core: ^1.2.0
+  fl_chart: ^0.36.1
   flutter_spinkit: ^5.0.0
+  google_fonts: ^2.1.0
   gsheets: ^0.3.0
   intl: ^0.17.0
   material_design_icons_flutter: ^4.0.5955
