--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,17 +27,17 @@ dependencies:
   cloud_firestore: ^1.0.5
   connectivity: ^3.0.6
   cupertino_icons: ^1.0.2
+  file_picker: ^3.0.2+2
   firebase_auth: ^1.1.0
   firebase_core: ^1.2.0
+  firebase_storage: ^8.1.3
   fl_chart: ^0.36.1
   flutter_spinkit: ^5.0.0
-  google_fonts: ^2.1.0
   gsheets: ^0.3.0
+  image_picker: ^0.8.0+3
   intl: ^0.17.0
   material_design_icons_flutter: ^4.0.5955
   provider: ^5.0.0
-  shared_preferences: ^2.0.5
-  transparent_image: ^2.0.0
 
 dev_dependencies:
   flutter_test:
