--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,14 @@ dependencies:
   firebase_core: ^1.2.0
   fl_chart: ^0.36.1
   flutter_spinkit: ^5.0.0
+  flutter_svg: ^0.22.0
   gsheets: ^0.3.0
   intl: ^0.17.0
-  material_design_icons_flutter: ^4.0.5955
   provider: ^5.0.0
   shared_preferences: ^2.0.6
   syncfusion_flutter_xlsio: ^19.1.69-beta
   universal_html: ^2.0.8
-  url_launcher: ^6.0.9
+  webviewx: ^0.1.0
 
 dev_dependencies:
   flutter_test:
