--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_auth: ^1.1.0
   firebase_core: ^1.2.0
   fl_chart: ^0.36.1
+  flutter_launcher_icons: ^0.9.0
   flutter_spinkit: ^5.0.0
   flutter_svg: ^0.22.0
   gsheets: ^0.3.0
@@ -38,12 +39,15 @@ dependencies:
   shared_preferences: ^2.0.6
   syncfusion_flutter_xlsio: ^19.1.69-beta
   universal_html: ^2.0.8
-  webviewx: ^0.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  image_path: 'assets/logo.png'
+  android: true
+  ios: true
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
